# openpathsimulations

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  firstsimtest.py  merge_output.py  openpathsimulation.py  pyproject.toml  sim-test.yaml  sim-test2.yaml  simtest_variable_res.py  simtest_variable_res_scan.py  test.py  visualize_openpathsimulations.py
conf/: example_config.yaml
