[tool.poetry]
name = "openpathsimulations"
version = "0.1.1"
description = ""
authors = ["Tobias Schmitt <tschmitt@iup.uni-heidelberg.de>", "Moritz Sindram <msindram@iup.uni-heidelberg.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = "^2.2"
openpathretrieval = { git = "git@github.com:ATMO-IUP-UHEI/OpenPathRetrieval.git"}
xarray = "^2025.1.2"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
ipympl = "^0.9.6"
h5netcdf = "^1.5.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
ipykernel = "^6.15.1"
nbformat = ">=4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
